# dialedIn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dial-daemon.c  dial_common.h  dial_config.cpp  dial_config.h  dial_daemon.cpp  dial_gui.cpp  dial_gui.h  dial_test.c  hyprland_rules.conf  install.sh  install_daemon.sh  rebuild.sh  status_daemon.sh  stop_daemon.sh
config/: default.toml
